--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>stylesheet linking test</title>
+	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
 <fieldset>
