update stylesheet location

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>stylesheet linking test</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/BaconWrappedShrimpWithEyes/testing-with-css/master/indexstyle.css">
 </head>
 <body>
 <fieldset>
